Cleaned three scraper script.
